--- a/css/apLAP.css
+++ b/css/apLAP.css
@@ -3,7 +3,7 @@ main{
     height: 100vh;
 }
 section{
-    background: url(../images/ap_bg.jpg) no-repeat center ;
+    background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3) ),url(../images/ap_bg.jpg) no-repeat center ;
     width: 100%;
     height: 100%;
 }
@@ -17,7 +17,7 @@ section::after{
 section .inner{
     max-width: 1650px;
     margin: 0 auto;
-    text-align: center;
+    /* text-align: center; */
 
 }
 section .inner h1{
@@ -25,10 +25,13 @@ section .inner h1{
     font-family: "recipe_kr";
     padding-top: 7%;
     margin-bottom: 3%;
-    color: transparent;
-    /* -webkit-text-stroke: 1px  #fff; */
-    background: url(../images/ap_bg.jpg) no-repeat center center cover;
-    
+    text-align: center;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color:transparent;
+    background-image: url(../images/ap_txt.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 section .inner .rest_inf{
     background-color: #fff;
@@ -36,15 +39,25 @@ section .inner .rest_inf{
     padding: 2%;
     display: flex;
     flex-direction: column;
+    width: 20%;
+    margin: 0 auto;
 }
 section .inner .rest_inf h2{
     font-size: 30px;
     font-weight: 700;
-    margin-bottom: 2%;
+    margin-bottom: 10%;
     display: inline-block;
+    text-align: center;
 }
 section .inner .rest_inf p{
     font-weight: 400;
     line-height: 1.4rem;
-    display: inline-block;
+    margin-bottom: 10%;
+}
+section .inner .rest_inf p:nth-child(3), section .inner .rest_inf p:nth-child(4){
+    margin-bottom: 0;
+    font-size: 15px;
+}
+section .inner .rest_inf p:nth-child(5){
+    font-size: 15px;
 }
